# rs-template

./: .env.example  .gitignore  DEPLOYMENT_PLAYBOOK.md  Makefile  PROJECT_SPEC.yml  PROJECT_STATUS.md  README.md  docker-compose.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml  deploy.yml.disabled  gcp-access-test.yml  pr-main.yml  pr-staging.yml  test-staging.yml
mobile/: .env.local.example  .gitignore  App.tsx  README.md
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/radicalsymmetry/rstemplate/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/RSTemplate/: Info.plist
mobile/ios/RSTemplate.xcodeproj/: project.pbxproj
mobile/ios/RSTemplate.xcodeproj/xcshareddata/xcschemes/: RSTemplate.xcscheme
mobile/ios/RSTemplate.xcworkspace/: contents.xcworkspacedata
mobile/src/contexts/: ApiContext.tsx  AuthContext.tsx
mobile/src/screens/: HomeScreen.tsx  LoadingScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx
mobile/src/services/: uploadService.ts
services/ai/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/ai/tests/: __init__.py
services/ai/tests/integration/: test_main.py
services/ai/tests/unit/: test_ai.py
services/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/api/tests/integration/: test_firestore_integration.py  test_main.py  test_storage_integration.py
services/api/tests/unit/: test_crud.py
services/gateway/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/gateway/tests/: __init__.py
services/gateway/tests/integration/: test_e2e_integration.py  test_gateway_integration.py  test_main.py
services/gateway/tests/unit/: test_auth.py  test_main.py
tools/: check-openai-models.py
tools/langfuse-trace-query/: .env.example  README.md  main.py  pyproject.toml
tools/test-runner/: README.md  aggregate_deps.py  pyproject.toml  requirements.txt  run_tests.py
