[project]
name = "langfuse-trace-query"
version = "0.1.0"
description = "Query and analyze Langfuse traces with filtering, export, and analysis capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=2.40.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]
