[project]
name = "rs-template-test-runner"
version = "0.1.0"
description = "Integration test runner for Radical Symmetry template"
requires-python = ">=3.11"
dependencies = [
    # Core test runner dependencies
    "httpx==0.25.2",
    "python-dotenv>=1.0.0",
    "pytest==7.4.4",
    # Service dependencies will be dynamically added
    # This file serves as the base - see aggregate_deps.py
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "langfuse==2.20.0",
    "python-multipart==0.0.6",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.30",
    "langchain-anthropic==0.3.18",
    "langchain-google-genai==2.1.9",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "google-cloud-firestore==2.14.0",
    "google-cloud-storage==2.13.0",
    "google-auth==2.32.0",
    "cryptography==41.0.7",
    "pyjwt[crypto]==2.8.0",
    "google-auth-httplib2==0.2.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["../../services"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
